--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "formidable": "^3.5.1",
+    "imapflow": "^1.0.144",
+    "mailparser": "^3.6.5",
     "papaparse": "^5.4.1"
   }
 }
