--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "formidable": "^3.5.1",
+    "imap": "^0.8.17",
     "imapflow": "^1.0.144",
     "mailparser": "^3.6.5",
     "papaparse": "^5.4.1"
