--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "formidable": "^3.5.1",
-    "imap": "^0.8.17",
     "imapflow": "^1.0.144",
     "mailparser": "^3.6.5",
+    "mongoose": "^7.5.3",
     "papaparse": "^5.4.1"
   }
 }
